test/cases/compile_errors/std.fmt_error_for_missing_slice_specifier.zig
export fn entry() void {
    @import("std").debug.print("hello {}", .{"world"});
}

// error
// backend=llvm
// target=native
//
// :?:?: error: cannot format array without a specifier (i.e. {s} or {any}) in "hello {}"
